--- a/sdi-entrega2-test-92/pom.xml
+++ b/sdi-entrega2-test-92/pom.xml
@@ -14,10 +14,11 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.4.1</version>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
