--- a/sdi-entrega2-test-92/pom.xml
+++ b/sdi-entrega2-test-92/pom.xml
@@ -14,7 +14,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
